--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.24.2",
     "mocha": "^6.1.4",
     "supertest": "^4.0.2"
   },
