--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,14 +2,23 @@
     "env": {
         "browser": true,
         "commonjs": true,
-        "es2021": true
+        "es6": true,
+        "mocha": true
     },
     "extends": [
         "airbnb-base"
     ],
-    "parserOptions": {
-        "ecmaVersion": 12
+    "globals": {
+        "Atomics": "readonly",
+        "SharedArrayBuffer": "readonly"
     },
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaVersion": 2018
+    },
+    "plugins": [
+        "@typescript-eslint"
+    ],
     "rules": {
     }
 }
