--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
+    "chai": "^4.3.4",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.2",
     "husky": "^7.0.2",
     "mocha": "^6.1.4",
     "nyc": "^15.1.0",
+    "sinon": "^11.1.2",
     "supertest": "^4.0.2",
     "typescript": "^4.4.3"
   },
