--- a/package.json
+++ b/package.json
@@ -2,17 +2,19 @@
   "name": "backend-coding-test",
   "version": "1.0.0",
   "description": "A coding assessment for Xendit backend interviews",
-  "main": "index.js",
+  "main": "index.ts",
   "directories": {
     "test": "tests"
   },
   "scripts": {
-    "test": "mocha tests",
-    "start": "node index.js",
-    "coverage": "nyc npm run test",
+    "start": "node ./build/index.js",
+    "test": "mocha --require ts-node/register tests/**/*.test.ts",
+    "test:coverage": "nyc npm run test",
     "prepare": "husky install",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}' 'tests/**/*.{js,jsx,ts,tsx}'",
-    "lint-fix": "npm run lint -- --fix"
+    "lint-fix": "npm run lint -- --fix",
+    "postinstall": "npm run build",
+    "build": "tsc"
   },
   "keywords": [
     "Xendit"
@@ -28,6 +30,15 @@
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.21",
+    "@types/express": "^4.17.13",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "^16.9.4",
+    "@types/sinon": "^10.0.2",
+    "@types/sqlite3": "^3.1.7",
+    "@types/supertest": "^2.0.11",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/yamljs": "^0.2.31",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "chai": "^4.3.4",
@@ -39,6 +50,7 @@
     "nyc": "^15.1.0",
     "sinon": "^11.1.2",
     "supertest": "^4.0.2",
+    "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   },
   "engines": {
