--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
+    "sqlite": "^4.0.23",
     "sqlite3": "^4.0.6",
     "swagger-ui-express": "^4.1.6",
     "winston": "^3.3.3",
