--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "author": "Bo",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "@types/hapi__joi": "^17.1.7",
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
     "sqlite": "^4.0.23",
