refactor: reduce complexity of error handling logic

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "noImplicitOverride": true,
     "allowUnreachableCode": false,
     "skipLibCheck": true
