--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "tests"
   },
   "scripts": {
-    "start": "node ./build/index.js",
+    "start": "ts-node ./index.ts",
     "test": "mocha --require ts-node/register tests/**/*.test.ts",
     "test:coverage": "nyc npm run test",
     "prepare": "husky install",
