--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/hapi__joi": "^17.1.7",
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
+    "helmet": "^4.6.0",
     "sqlite": "^4.0.23",
     "sqlite3": "^4.0.6",
     "swagger-ui-express": "^4.1.6",
@@ -36,6 +37,7 @@
     "@types/chai": "^4.2.21",
     "@types/chai-as-promised": "^7.1.4",
     "@types/express": "^4.17.13",
+    "@types/helmet": "^4.0.0",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.9.4",
     "@types/sinon": "^10.0.2",
