--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/hapi__joi": "^17.1.7",
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
+    "express-rate-limit": "^5.3.0",
     "helmet": "^4.6.0",
     "sqlite": "^4.0.23",
     "sqlite3": "^4.0.6",
@@ -37,6 +38,7 @@
     "@types/chai": "^4.2.21",
     "@types/chai-as-promised": "^7.1.4",
     "@types/express": "^4.17.13",
+    "@types/express-rate-limit": "^5.1.3",
     "@types/helmet": "^4.0.0",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.9.4",
