--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}' 'tests/**/*.{js,jsx,ts,tsx}'",
     "lint-fix": "npm run lint -- --fix",
     "postinstall": "npm run build",
-    "build": "tsc"
+    "build": "tsc",
+    "test:artillery": "artillery run --output ./artillery/reports/test_report.json --config ./artillery/config.yml ./artillery/scenarios.yml",
+    "test:load": "start-server-and-test start http://localhost:8010/health test:artillery"
   },
   "keywords": [
     "Xendit"
@@ -35,6 +37,7 @@
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "@types/artillery": "^1.6.2",
     "@types/chai": "^4.2.21",
     "@types/chai-as-promised": "^7.1.4",
     "@types/express": "^4.17.13",
@@ -49,6 +52,7 @@
     "@types/yamljs": "^0.2.31",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
+    "artillery": "1.6.2",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "eslint": "^6.8.0",
@@ -58,6 +62,7 @@
     "mocha": "^6.1.4",
     "nyc": "^15.1.0",
     "sinon": "^11.1.2",
+    "start-server-and-test": "^1.14.0",
     "supertest": "^4.0.2",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
