style: address linting errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,7 @@
         "mocha": true
     },
     "extends": [
-        "airbnb-base"
+        "airbnb-typescript"
     ],
     "globals": {
         "Atomics": "readonly",
@@ -14,11 +14,29 @@
     },
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": 2018
+        "ecmaVersion": 2018,
+        "project": "./tsconfig.json"
     },
     "plugins": [
-        "@typescript-eslint"
+        "@typescript-eslint",
+        "import"
     ],
     "rules": {
+        "import/extensions": [
+            "error",
+            "ignorePackages",
+            {
+                "js": "never",
+                "jsx": "never",
+                "ts": "never",
+                "tsx": "never"
+            }
+        ],
+        "react/jsx-filename-extension": "off"
+    },
+    "settings": {
+        "import/resolver": {
+            "typescript": {}
+        }
     }
 }
