--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "chai-as-promised": "^7.1.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb-typescript": "^14.0.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.24.2",
     "husky": "^7.0.2",
     "mocha": "^6.1.4",
